# internal/models/db_models/pois.go
@@ -21,3 +21,27 @@ type POI struct {
 	Activities   []JourneyActivity `gorm:"foreignKey:SelectedPOIID"`
 	CheckIns     []CheckIn
 }
+
+type POISearchDoc struct {
+	ID         string  `json:"id"`
+	Name       string  `json:"name"`
+	Latitude   float64 `json:"latitude"`
+	Longitude  float64 `json:"longitude"`
+	ProvinceID string  `json:"provinceId"`
+	CategoryID string  `json:"categoryId"`
+	Status     string  `json:"status"`
+	Address    string  `json:"address"`
+}
+
+func ToSearchDoc(p *POI) POISearchDoc {
+	return POISearchDoc{
+		ID:         p.ID.String(),
+		Name:       p.Name,
+		Latitude:   p.Latitude,
+		Longitude:  p.Longitude,
+		ProvinceID: p.ProvinceID.String(),
+		CategoryID: p.CategoryID.String(),
+		Status:     p.Status,
+		Address:    p.Address,
+	}
+}
